# opendoc-mcp

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  localinstall.sh  localupdate.sh  rust-toolchain.toml  todo.md
benches/: benchmarks.rs
docs/: architecture.md  changelog.md  implementationplan.md  spec.md
src/: cli.rs  main.rs  server.rs  types.rs
src/batch/: mod.rs
src/converters/: mod.rs
src/engine/: diff.rs  extract.rs  mod.rs  template.rs
src/handlers/: docx.rs  mod.rs  pdf.rs  pptx.rs  xlsx.rs
src/ir/: document.rs  elements.rs  mod.rs
src/ocr/: mod.rs
src/validators/: mod.rs
