[package]
name = "opendoc-mcp"
version = "0.0.1"
edition = "2021"
description = "High-performance Rust MCP server for DOCX, PPTX, PDF document CRUD — designed for AI agents"
license = "MIT"

[dependencies]
# MCP Protocol (official Rust SDK)
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DOCX: create, read, layout, convert to PDF/HTML/MD
rdocx = "0.1"

# PPTX: pure-Rust PowerPoint manipulation
pptx = "0.1"

# PDF: load, merge, edit, save
lopdf = "0.31"

# Errors
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templating
regex = "1"
